--- a/README.Rmd
+++ b/README.Rmd
@@ -473,6 +473,34 @@ We have one last task to accomplish: downloading the genome assemblies to nicely
   This glues together the value of `$speciesCode` and the text string _genomeAssembly.fna.gz and assigns it to the new variable, `$filename`. The single quotes ensure that _genomeAssembly.fna.gz is interpreted as plain text. 
 </details>
 
+<details>
+  <summary>Now, how would you download the files to the nice filenames? </summary>
+  
+  Your script should look like:
+  
+  ```
+  # While reading each line of the file:
+  while read -r line;
+  do
+      # Echo the value of $line
+      echo $line
+      # Create the transcriptUrl variable:
+      export transcriptUrl=`echo "$line" | awk -F',' '{print $1}'`
+        
+      # Create the speciesCode variable
+      export speciesCode=`echo "$line" | awk -F',' '{print $2}'`
+        
+      # Create the filename variable with a nice filename:
+      export filename=$speciesCode'_genomeAssembly.fna.gz'
+
+      # Download the genome assembly, whose filename is in $filename and URL is stored in $transcriptUrl:
+      wget -O $filename $transcriptUrl
+  done < genomeURLs.txt
+  ```
+   
+ 
+</details>
+
 ### Bash and command line options
 With the way our script is currently written, it will only run on a specific file of assembly URLs, which must be named `genomeURLs.txt` and must be located in our current working directory. That's not super flexible!
 
